removed files, updated code

--- a/index.html
+++ b/index.html
@@ -26,21 +26,22 @@
             </div>
 
             <button type="submit" name="submit-btn" id="submit-btn" class="btn btn-primary">Submit</button>
+            <button type="reset" id="reset-text" class="btn btn-default">Clear Input</button>
           </form>
 
         </div>
         <div id="column-two" class="col-md-3">
-          <h2>Equilateral Triangles</h2>
+          <h3>Equilateral Triangles</h3>
           <ul id="equil-triangle"></ul>
         </div>
 
         <div id="column-three" class="col-md-3">
-          <h2>Isosceles Triangles</h2>
+          <h3>Isosceles Triangles</h3>
           <ul id="isos-triangle"></ul>
         </div>
 
         <div id="column-four" class="col-md-3">
-          <h2>Scalene Triangles</h2>
+          <h3>Scalene Triangles</h3>
           <ul id="scal-triangle"></ul>
         </div>
 
